k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appsmith
  labels:
    name: appsmith
